[package]
name = "lo_migrate"
version = "0.1.0"
authors = ["Peter Gerber <peter@arbitrary.ch>"]

[badges]
travis-ci = { repository = "pgerber/lo-migrate" }

[dependencies]
clap = "2.29"
chrono = "0.4"
derive-error = "0.0"
digest = "0.7"
fallible-iterator = "0.1"
sha-1 = "0.7"
sha2 = "0.7"
postgres = "0.14"
postgres_large_object = "0.6"
rusoto_core = { git = "https://github.com/rusoto/rusoto", rev = "bd458ff256094f612d94f24aea21a47f8cc26c61" }
rusoto_credential = { git = "https://github.com/rusoto/rusoto", rev = "bd458ff256094f612d94f24aea21a47f8cc26c61" }
rusoto_s3 = { git = "https://github.com/rusoto/rusoto", rev = "bd458ff256094f612d94f24aea21a47f8cc26c61" }
rustc-serialize = "0.3"
two-lock-queue = "0.1"
clippy = { version = "*", optional = true }
mkstemp-rs = "0.0"
hyper = "0.10"
log = "0.3"
env_logger = "0.4"
hyper-rustls = "0.6"

[dev-dependencies]
rand = "0.4"
regex = "0.2"
simple_logger = "0.4"

[features]
travis_tests = ["postgres_tests", "s3_tests"]
postgres_tests = []
s3_tests = []
try_from = []
integer_atomics = []
unstable = ["try_from", "integer_atomics"]
default = ["unstable"]

[[bin]]
name = "lo_migrate_cli"
path = "src/main.rs"
test = false
doc = false
